# SDL2-

./: .hgignore  CMakeLists.txt  contributors.txt  cpl.sh  main.cpp
include/: error.h  point.h  rect.h  renderer.h  texture.h
src/: error.cpp  main.cpp  renderer.cpp  texture.cpp
