PROJECT( SDL2++ )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0.0 )

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/modules)

FIND_PACKAGE( PkgConfig REQUIRED )
PKG_CHECK_MODULES( SDL2 REQUIRED sdl2 )
#PKG_CHECK_MODULES( SDL2_image REQUIRED SDL2_image )
#PKG_CHECK_MODULES( SDL2_ttf REQUIRED SDL2_ttf )
#PKG_CHECK_MODULES( SDL2_net REQUIRED SDL2_net )

#FIND_PACKAGE( OpenGL REQUIRED)
#FIND_PACKAGE( GLEW REQUIRED)
FIND_PACKAGE( GLM REQUIRED)
#FIND_PACKAGE( SDL2GFX REQUIRED)

INCLUDE_DIRECTORIES( ${SDL2_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( ${SDL2_image_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( ${SDL2_ttf_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( ${SDL2_net_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( ${SDL2GFX_INCLUDE_DIR} )
#INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} )
#INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${GLM_INCLUDE_DIRS} )

SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++14 -Wall -Wextra -pedantic -g3 -ggdb3 -fdiagnostics-color=always" )
SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++14 -g0 O2" )

SET( CMAKE_BUILD_TYPE "Debug" )
SET( CMAKE_EXPORT_COMPILE_COMMANDS TRUE )

SET( SOURCE_FILES
	src/main.cpp
	src/renderer.cpp
	src/rect.cpp
	src/point.cpp
	src/error.cpp
	src/texture.cpp
)

INCLUDE_DIRECTORIES( include )
SET( HEADER_FILES
	include/renderer.h
	include/rect.h
	include/point.h
	include/error.h
	include/texture.h
)

ADD_EXECUTABLE( SDL2++
	${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES( SDL2++
	${SDL2_LIBRARIES}
	#${SDL2_image_LIBRARIES}
	#${SDL2_ttf_LIBRARIES}
	#${SDL2_net_LIBRARIES}
	#${SDL2GFX_LIBRARY_TEMP}
	#${OPENGL_LIBRARIES}
	#${GLEW_LIBRARIES}
	${GLM_LIBRARIES}
)

INSTALL( TARGETS SDL2++	RUNTIME DESTINATION . )


SET( CPACK_PACKAGE_NAME "SDL2++" )
SET( CPACK_PACKAGE_VENDOR "Manuel Bellersen" )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "SDL2++" )
SET( CPACK_PACKAGE_VERSION "0.0.0" )
SET( CPACK_PACKAGE_VERSION_MAJOR "0" )
SET( CPACK_PACKAGE_VERSION_MINOR "0" )
SET( CPACK_PACKAGE_VERSION_PATCH "0" )
SET( CPACK_PACKAGE_INSTALL_DIRECTORY "SDL2++" )

INCLUDE( CPack )
